<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_order4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hw1.android.csulb.edu.hw1.OrderActivity4">


    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_arrow_forward_white_48dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:id="@+id/goToConfirmationButton"
        app:backgroundTint="@color/colorPrimary"
        android:onClick="placeTheOrder"
        app:elevation="3dp" />

    <!--<Button-->
    <!--android:text="@string/place_the_order"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignParentBottom="true"-->
    <!--android:id="@+id/placeTheOrderButton"-->
    <!--android:background="@color/colorAccent"-->
    <!--android:textColor="@color/icons"-->
    <!--android:textStyle="bold"-->
    <!--android:onClick="placeTheOrder"-->
    <!--android:elevation="5dp" />-->

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/beverage_relativeLayout">

        <TextView
            android:text="@string/beverage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/below_text_vertical_margin"
            android:id="@+id/beverage_text"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/title_size"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"/>

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/beverage_text"
            android:id="@+id/beverage_scroll">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/beverages"
                android:minHeight="180dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/beverage_col2"
                    android:layout_toEndOf="@+id/beverage_col1"
                    android:layout_marginStart="50dp">

                    <CheckBox
                        android:text="@string/cerveza"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/checkBox_cerveza"
                        android:layout_margin="@dimen/activity_horizontal_margin" />

                    <CheckBox
                        android:text="@string/tequila"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/checkBox_tequila"
                        android:layout_margin="@dimen/activity_horizontal_margin" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/beverage_col1"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true">

                    <CheckBox
                        android:text="@string/soda"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/checkBox_soda"
                        android:layout_margin="@dimen/activity_horizontal_margin"/>

                    <CheckBox
                        android:text="@string/margarita"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/checkBox_margarita"
                        android:layout_margin="@dimen/activity_horizontal_margin" />

                </LinearLayout>

            </RelativeLayout>

        </ScrollView>

    </RelativeLayout>

</RelativeLayout>
